changes to carousel

--- a/index.html
+++ b/index.html
@@ -87,64 +87,64 @@
         </div>
       </div>
     </div>
-</div>
+  </div>
 
-    <! --- beans --->
+  <! --- beans --->
 
-    <div class="container headers-landing our-coffees-landing">
+  <div class="container headers-landing our-coffees-landing">
+    <div class="row no-gutters">
+      <div class="col-12">
+        <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" class="our-coffees-img">
+        <p class="ph-landing uppercase">our coffees</p>
+      </div>
+    </div>
+  </div>
+
+  <! --- cards for beans section --->
+
+  <div class="container cards-beans px-0">
+    <div class="card-deck my-4">
       <div class="row no-gutters">
-        <div class="col-12">
-          <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" class="our-coffees-img">
-          <p class="ph-landing uppercase">our coffees</p>
-        </div>
-      </div>
-    </div>
 
-    <! --- cards for beans section --->
+        <div class="col-12 col-md-6">
 
-    <div class="container cards-beans px-0">
-      <div class="card-deck my-4">
-        <div class="row no-gutters">
-
-          <div class="col-12 col-md-6">
-
-            <div class="card mx-0 mr-2">
-              <div class="card-header my-border">
-                <h2>Single Origin</h2>
-              </div>
-              <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image" width=256 height=146>
-              <div class="card-body my-border">
-                <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-                <a href="coffees-single.html" class="btn btn-info my-button my-border">Read more</a>
-              </div>
+          <div class="card mx-1">
+            <div class="card-header my-border">
+              <h2>Single Origin</h2>
+            </div>
+            <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image" width=256 height=146>
+            <div class="card-body my-border">
+              <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
+              <a href="coffees-single.html" class="btn btn-info my-button my-border">Read more</a>
             </div>
           </div>
+        </div>
 
 
 
-          <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6">
 
-            <div class="card mx-0 ml-2">
-              <div class="card-header my-border">
-                <h2>Blends</h2>
-              </div>
-              <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image" width=256 height=146>
-              <div class="card-body my-border">
-                <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-                <a href="coffees-blends.html" class="btn btn-info my-button my-border">Read more</a>
-              </div>
+          <div class="card mx-1">
+            <div class="card-header my-border">
+              <h2>Blends</h2>
+            </div>
+            <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image" width=256 height=146>
+            <div class="card-body my-border">
+              <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
+              <a href="coffees-blends.html" class="btn btn-info my-button my-border">Read more</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
 
   <! --- sca courses --->
 
 
   <div class="container headers-landing">
-    <div class="row">
+    <div class="row no-gutters">
       <div class="col">
         <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
         <p class="ph-landing uppercase">our courses</p>
@@ -184,7 +184,7 @@
   <! --- brew guides --->
 
   <div class="container headers-landing">
-    <div class="row">
+    <div class="row no-gutters">
       <div class="col">
         <img src="./assets/images/brew-guides.png" alt="brewing vesels image" width=100% height=auto>
         <p class="ph-landing">Brewing Guides</p>
@@ -242,9 +242,9 @@
 
   <! --- testimonials carousel  --->
 
-  <div class="container">
-    <div class="row">
-      <div class="col">
+  <div class="container carousel-container">
+    <div class="row no-gutters">
+      <div class="col-12">
 
         <div id="testimonialscarousel" class="carousel slide" data-ride="carousel">
 
@@ -260,27 +260,34 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./assets/images/carousel1.jpg" alt="Oxmantown Café Image" width="1100" height="500">
-              <div class="carousel-caption">
-                <p style="width: 100%; height: 100%; background-color: rgba(51,153,102,0.75" ;>"The feedback from our customers has been very positive about the coffee and quite often we are asked where they can get it outside of the restaurant." | Oxmantown</p>
+              <div class="img-centering d-flex justify-content-center">
+                <img src="./assets/images/carousel1.jpg" alt="Oxmantown Café Image">
+                <div class="carousel-caption">
+                  <p style="background-color: rgba(74,74,79,0.75);">"The feedback from our customers has been very positive." - Oxmantown</p>
+                </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="img-centering d-flex justify-content-center">
+                <img src="./assets/images/carousel2.jpg" alt="BIBI's Café Image">
+                <div class="carousel-caption">
+                  <p style="background-color: rgba(74,74,79,0.75);">"Coffee Project Co. have been there for us every step of the way." - BIBI's</p>
+                </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="img-centering d-flex justify-content-center">
+                <img src="./assets/images/carousel3.jpg" alt="Forest Ave. Restaurant Image">
+                <div class="carousel-caption">
+                  <p style="background-color: rgba(74,74,79,0.75);">"Coffee Project Co. coffee is, no doubt, exceptional quality coffee." - Forest Ave.</p>
+                </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <img src="./assets/images/carousel2.jpg" alt="BIBI's Café Image" width="1100" height="500">
-              <div class="carousel-caption">
-                <p style="width: 100%; height: 100%; background-color: rgba(153,102,102,0.75" ;>"Coffee Project Co. have been there for us every step of the way with training and guidance to make sure that each cup is as good as the last." | BIBI's</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./assets/images/carousel3.jpg" alt="Forest Ave. Restaurant Image" width="1100" height="500">
-              <div class="carousel-caption">
-                <p style="width: 100%; height: 100%; background-color: rgba(204,153,0,0.75)" ;>"We have been open for over a year now and have used Coffee Project Co. coffee from the very start. It is, no doubt, exceptional quality coffee." | Forest Ave. Restaurant</p>
-              </div>
-            </div>
-          </div>
+        </div>
 
           <! --- controls  --->
-
+          
+          
           <a class="carousel-control-prev" href="#testimonialscarousel" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
@@ -288,7 +295,6 @@
     <span class="carousel-control-next-icon"></span>
   </a>
         </div>
-
 
       </div>
     </div>
@@ -300,86 +306,86 @@
 
 
 
- <! --- form --->
+  <! --- form --->
 
-    <div class="container">
-        <div class="row no-gutters">
-            <div class="col-6 offset-3">
-                <h3 class="text-center form-heading">Espresso yourself</h3>
-                <form>
-                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                    <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                    <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
-                    <div class="form-row text-center">
-                        <div class="col">
-                            <button type="submit" class="btn my-button my-border">Send message</button>
-                        </div>
-                </form>
-                </div>
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-6 offset-3">
+        <h3 class="text-center form-heading">Espresso yourself</h3>
+        <form>
+          <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+          <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+          <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+          <div class="form-row text-center">
+            <div class="col">
+              <button type="submit" class="btn my-button my-border">Send message</button>
             </div>
+        </form>
         </div>
+      </div>
     </div>
+  </div>
 
 
-    <! --- footer --->
+  <! --- footer --->
 
-    <footer>
-      <div class="footer">
+  <footer>
+    <div class="footer">
 
-        <div class="container">
-          <div class="row">
+      <div class="container">
+        <div class="row">
 
-            <div class="col-6 media d-inline-flex justify-content-center">
-              <ul class="list-inline">
-                <li class="list-inline-item">
-                  <a href="https://www.facebook.com/" target="_blank">
+          <div class="col-6 media d-inline-flex justify-content-center">
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/" target="_blank">
 <i class="fab fa-facebook-f" aria-hidden="true"></i>
 <span class="sr-only">Facebook</span>
 </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="https://twitter.com/" target="_blank">
+              </li>
+              <li class="list-inline-item">
+                <a href="https://twitter.com/" target="_blank">
 <i class="fab fa-twitter" aria-hidden="true"></i>
 <span class="sr-only">Twitter</span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="https://www.linkedin.com" target="_blank">
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com" target="_blank">
 <i class="fab fa-linkedin-in" aria-hidden="true"></i>
 <span class="sr-only">LinkedIn</span>
 </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="https://www.pinterest.com/" target="_blank">
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.pinterest.com/" target="_blank">
 <i class="fab fa-pinterest" aria-hidden="true"></i>
 <span class="sr-only">Pinterest</span>
 </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="https://www.instagram.com/" target="_blank">
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/" target="_blank">
 <i class="fab fa-instagram" aria-hidden="true"></i>
 <span class="sr-only">Instagram</span>
 </a>
-                </li>
+              </li>
 
-              </ul>
-            </div>
-            <div class="col-6 my-info d-inline-flex justify-content-center">
-              <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
-            </div>
+            </ul>
+          </div>
+          <div class="col-6 my-info d-inline-flex justify-content-center">
+            <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
           </div>
         </div>
-
-      </div>
       </div>
 
+    </div>
+    </div>
 
-      </div>
-    </footer>
+
+    </div>
+  </footer>
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
