added content and styling to coffees-single.html

--- a/coffees-single.html
+++ b/coffees-single.html
@@ -60,79 +60,198 @@
         <div class="row">
             <div class="col-12">
 
-                <div class="media border p-5">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body">
                         <h4>Colombia</h4>
                         <p>Smooth, yet utterly complex, dark, robust and rich. Colombian coffee is justly renowned for its incredible coffee flavour, truly one of the finest!</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="media border p-5">
+        <div class="row">
+            <div class="col-12">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body">
                         <h4>Ethiopia</h4>
                         <p>This African coffee has a smooth soft mouth feel, with fruity berry and some nuttiness with a hint of sweet ripe cherry.</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
                     </div>
                 </div>
-
             </div>
+        </div>
 
+        <div class="row">
             <div class="col-12">
 
-                <div class="media border p-5">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/papanewguinea-icon.png" alt="papa new guinea icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body">
                         <h4>Papa New Guinea</h4>
                         <p>Citric with chocolate tones best describes this Indonesian coffee that leave's a wonderful lingering herbal aftertaste.</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
                     </div>
                 </div>
-
-            </div>
-
-            <div class="col-12">
-
-                <div class="media border p-5">
-                    <img src="./assets/images/puertorico-icon.png" alt="puerto rico icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Puerto Rico</h4>
-                        <p>Café Hacienda San Pedro possesses a taste so rich and seductive, so velvety and smooth that it surprises the palate. Its classic aroma is semi-sweet and caramel-like with a delicate chocolaty aftertaste and spicy overtones.</p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="col-12">
-
-                <div class="media border p-5">
-                    <img src="./assets/images/tanzania-icon.png" alt="tanzania icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body">
-                        <h4>Tanzania</h4>
-                        <p>This African coffee is rich with a creamy body and a hint of tropical fruit, raisin and complex acidity. </p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="col-12">
-
             </div>
         </div>
 
 
+        <div class="row">
+            <div class="col-12">
+
+                <div class="media my-border my-2 p-3">
+                    <img src="./assets/images/puertorico-icon.png" alt="puerto rico icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                    <div class="media-body">
+                        <h4>Puerto Rico</h4>
+                        <p>Café Hacienda San Pedro possesses a taste so rich and seductive, so velvety and smooth that it surprises the palate. Its classic aroma is semi-sweet and caramel-like with a delicate chocolaty aftertaste and spicy overtones.</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+
+                <div class="media my-border my-2 p-3">
+                    <img src="./assets/images/tanzania-icon.png" alt="tanzania icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                    <div class="media-body">
+                        <h4>Tanzania</h4>
+                        <p>This African coffee is rich with a creamy body and a hint of tropical fruit, raisin and complex acidity. </p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars">
+                                <p class="coffee-review">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    </div>
+    </div>
+
+    <!-- footer -->
+
+  
 
 
 
-        <! --- footer --->
-
-        <footer>
-
-        </footer>
 
 
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        </body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
 
 </html>
